# shopsystem-devcontainer

./: CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/shop/: name.md
.devcontainer/: Dockerfile
.github/workflows/: publish-devcontainer.yml
features/: base_image.feature  ci_workflow.feature  devcontainer_dockerfile.feature
src/: Dockerfile
tests/: conftest.py  test_features.py
